--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Document</title>
 
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/grid.css">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
 
 </head>
